--- a/openApiDocs/v1.0/Applications.yml
+++ b/openApiDocs/v1.0/Applications.yml
@@ -104,6 +104,8 @@ paths:
                 - samlMetadataUrl desc
                 - serviceManagementReference
                 - serviceManagementReference desc
+                - servicePrincipalLockConfiguration
+                - servicePrincipalLockConfiguration desc
                 - signInAudience
                 - signInAudience desc
                 - spa
@@ -158,6 +160,7 @@ paths:
                 - requiredResourceAccess
                 - samlMetadataUrl
                 - serviceManagementReference
+                - servicePrincipalLockConfiguration
                 - signInAudience
                 - spa
                 - tags
@@ -290,6 +293,7 @@ paths:
                 - requiredResourceAccess
                 - samlMetadataUrl
                 - serviceManagementReference
+                - servicePrincipalLockConfiguration
                 - signInAudience
                 - spa
                 - tags
@@ -5947,6 +5951,7 @@ paths:
                 - requiredResourceAccess
                 - samlMetadataUrl
                 - serviceManagementReference
+                - servicePrincipalLockConfiguration
                 - signInAudience
                 - spa
                 - tags
@@ -6136,6 +6141,7 @@ paths:
                 - requiredResourceAccess
                 - samlMetadataUrl
                 - serviceManagementReference
+                - servicePrincipalLockConfiguration
                 - signInAudience
                 - spa
                 - tags
@@ -6224,6 +6230,8 @@ paths:
                 - samlMetadataUrl desc
                 - serviceManagementReference
                 - serviceManagementReference desc
+                - servicePrincipalLockConfiguration
+                - servicePrincipalLockConfiguration desc
                 - signInAudience
                 - signInAudience desc
                 - spa
@@ -17478,6 +17486,8 @@ components:
               type: string
               description: References application or service contact information from a Service or Asset Management database. Nullable.
               nullable: true
+            servicePrincipalLockConfiguration:
+              $ref: '#/components/schemas/microsoft.graph.servicePrincipalLockConfiguration'
             signInAudience:
               type: string
               description: 'Specifies the Microsoft accounts that are supported for the current application. The possible values are: AzureADMyOrg, AzureADMultipleOrgs, AzureADandPersonalMicrosoftAccount (default), and PersonalMicrosoftAccount. See more in the table. The value of this object also limits the number of permissions an app can request. For more information, see Limits on requested permissions per app. The value for this property has implications on other app object properties. As a result, if you change this property, you may need to change other properties first. For more information, see Validation differences for signInAudience.Supports $filter (eq, ne, not).'
@@ -19239,7 +19249,6 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.resourceSpecificPermissionGrant'
-              description: The permission that has been granted for a group to a specific application. Supports $expand.
               x-ms-navigationProperty: true
             settings:
               type: array
@@ -19638,6 +19647,31 @@ components:
           description: The unique identifier for the resource that the application requires access to. This should be equal to the appId declared on the target resource application.
       additionalProperties:
         type: object
+    microsoft.graph.servicePrincipalLockConfiguration:
+      title: servicePrincipalLockConfiguration
+      type: object
+      properties:
+        allProperties:
+          type: boolean
+          description: 'Enables locking all sensitive properties. The sensitive properties are keyCredentials, passwordCredentials, and tokenEncryptionKeyId.'
+          nullable: true
+        credentialsWithUsageSign:
+          type: boolean
+          description: Locks the keyCredentials and passwordCredentials properties for modification where credential usage type is Sign.
+          nullable: true
+        credentialsWithUsageVerify:
+          type: boolean
+          description: Locks the keyCredentials and passwordCredentials properties for modification where credential usage type is Verify. This locks OAuth service principals.
+          nullable: true
+        isEnabled:
+          type: boolean
+          description: 'Enables or disables service principal lock configuration. To allow the sensitive properties to be updated, update this property to false to disable the lock on the service principal.'
+        tokenEncryptionKeyId:
+          type: boolean
+          description: Locks the tokenEncryptionKeyId property for modification on the service principal.
+          nullable: true
+      additionalProperties:
+        type: object
     microsoft.graph.spaApplication:
       title: spaApplication
       type: object
@@ -19700,7 +19734,7 @@ components:
       properties:
         id:
           type: string
-          description: The unique idenfier for an entity. Read-only.
+          description: The unique identifier for an entity. Read-only.
       additionalProperties:
         type: object
     microsoft.graph.stsPolicy:
@@ -21947,6 +21981,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.resourceSpecificPermissionGrant'
+              description: A collection of permissions granted to apps for the chat.
               x-ms-navigationProperty: true
             pinnedMessages:
               type: array
@@ -22058,6 +22093,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.resourceSpecificPermissionGrant'
+              description: A collection of permissions granted to apps to access the team.
               x-ms-navigationProperty: true
             photo:
               $ref: '#/components/schemas/microsoft.graph.profilePhoto'
@@ -23836,7 +23872,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.itemReference'
             webUrl:
               type: string
-              description: URL that displays the resource in the browser. Read-only.
+              description: 'URL that either displays the resource in the browser (for Office file formats), or is a direct link to the file (for other formats). Read-only.'
               nullable: true
             createdByUser:
               $ref: '#/components/schemas/microsoft.graph.user'
