--- a/openApiDocs/v1.0/Identity.Partner.yml
+++ b/openApiDocs/v1.0/Identity.Partner.yml
@@ -1781,7 +1781,7 @@ components:
       properties:
         id:
           type: string
-          description: The unique idenfier for an entity. Read-only.
+          description: The unique identifier for an entity. Read-only.
       additionalProperties:
         type: object
     microsoft.graph.delegatedAdminAccessDetails:
